--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.2.2",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-media-console": "^2.2.4",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-video": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
